kubernetes/apps/monitoring/victoria-metrics-k8s-stack/resources/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: istio-gateway-internal
      namespace: network
      sectionName: https-grafana
  hostnames:
    - grafana.chillincool.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
